# MeguKin

./: .gitignore  CheckGrammar.py  LICENSE  Makefile  MeguKin.cabal  README  README.md  cabal.project  grammar_test  megukin  pyproject.toml  requirements.txt
MeguKin/: Comparable.py  Error.py  File.py  Loggers.py  Pretty.py  Reconstruction.py  Transform.py  grammar.lark
MeguKin/Ast/: Indentation.py  Transform.py
MeguKin/Ast/Types/: DataType.py  Expression.py  PatternMatch.py  Top.py  Type.py
MeguKin/Compiler/: Main.py
MeguKin/ConcreteSyntaxTree/: CST.py  PatternMatch.py  Transform.py
MeguKin/ModuleLoad/: Load.py  Module.py  SymbolResolution.py  TaskManager.py
MeguKin/Old/Ast/: Transform.py
MeguKin/Old/Ast/Types/: Top.py  Type.py
MeguKin/Parser/: Indentation.py  Parser.py  SegmentFile.py  Token.py  grammar.lark
MeguKin/StaticCheck/: ModuleCorrectness.py
MeguKin/SugaredSyntaxTree/: Bound.py  Expression.py  FreeVariables.py  Module.py  PatternMatch.py  Pretty.py  Range.py  SST.py  Top.py  Transform.py  Type.py
MeguKin/Types/: Expression.py  PatternMatch.py  Top.py  Type.py
app/: main.py
desing/: core
docs/source/: MeguKin.CodeGeneration.rst  MeguKin.ConcreteSyntaxTree.Transform.rst  MeguKin.ConcreteSyntaxTree.rst  MeguKin.Error.rst  MeguKin.File.rst  MeguKin.ModuleLoad.Load.rst  MeguKin.ModuleLoad.Module.rst  MeguKin.ModuleLoad.rst  MeguKin.Parser.Indentation.rst  MeguKin.Parser.Parser.rst  MeguKin.Parser.SegmentFile.rst  MeguKin.Parser.rst  MeguKin.StaticCheck.ModuleCorrectness.rst  MeguKin.StaticCheck.rst  MeguKin.SugaredSyntaxTree.Expression.rst  MeguKin.SugaredSyntaxTree.PatternMatch.rst  MeguKin.SugaredSyntaxTree.Top.rst  MeguKin.SugaredSyntaxTree.Transform.rst  MeguKin.SugaredSyntaxTree.Type.rst  MeguKin.SugaredSyntaxTree.rst  MeguKin.rst  conf.py  index.rst  modules.rst
examples/: Maybe.megu  Naturals.megu  add.megu  factorial.megu
examples/Parser/: ModuleDeclaration
examples/Parser/ModuleDeclaration/Positives/: 1
nix/: hix.nix
source/: conf.py  index.rst
src/: Main.hs
src/MeguKin/Lexer/: Types.hs
src/MeguKin/Parser/: Parsers.hs  Types.hs
src/MeguKin/Stream/: Types.hs
test/: Main.hs
test/Test/MeguKin/: Parser.hs
tests/: ASTgenerators.py  SST_generators.py  _test_SugarTransform.py  _test_Transform.py  lark_generator.py  test_CheckGrammar.py  test_Indenter.py  test_Pretty.py  test_RoundTripParser.py  test_Segmenter.py  test_SugarTransform.py  test_Transform.py  test_dependecy_cycles.py  test_ini.py
tests/TestConcreteTypeTree/: test_FreeVariables.py
tests/TestFreeVariables/: test_FreeVariables.py
