cabal-version: 2.4
name: MeguKin
version: 1.0.0.2
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) Luis Alberto Díaz Díaz 
author: Luis Alberto Díaz Díaz
maintainer: Luis Alberto Díaz Díaz <73986926+Luis-omega@users.noreply.github.com>
bug-reports: 73986926+Luis-omega@users.noreply.github.com
stability: stable

-- homepage: http://www.haskell.org/hello/
synopsis: Another functional language
category: Language
build-type: Simple

Description:
  Another functional language

--source-repository head
--  type:     darcs
--  location: http://darcs.haskell.org/hello/

-- flag threaded
--   default: False

common defaults
  ghc-options: 
    -Werror 
    -Wall 
    -Wunused-packages 
    -Wmissing-import-lists 
    -Wmissing-export-lists 
    -Wmissing-signatures 
    -Wname-shadowing 
    -fforce-recomp 
    -- -fno-code
  default-extensions: 
    NoImplicitPrelude
    NamedFieldPuns
    RecordWildCards
    ScopedTypeVariables
  build-depends: base >= 4.2 && < 5

library
  import: defaults
  hs-source-dirs: src

executable main
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs

test-suite test
  import: defaults
  type:exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    sandwich
    -- I would like to use `sydtest` but `nix develop` keeps failing


--  if flag(threaded)
--     ghc-options: -threaded
