cabal-version: 3.4
name: MeguKin
version: 1.0.0.2
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) Luis Alberto Díaz Díaz 
author: Luis Alberto Díaz Díaz
maintainer: Luis Alberto Díaz Díaz <73986926+Luis-omega@users.noreply.github.com>
bug-reports: 73986926+Luis-omega@users.noreply.github.com
stability: stable

homepage: https://github.com/Luis-omega/MeguKin
synopsis: Another functional language
category: Language
build-type: Simple

Description:
  Another functional language


-- flag threaded
--   default: False

common ghc-options
  ghc-options: 
    -Werror 
    -Wall 
    -- -Wunused-packages 
    -Wmissing-import-lists 
    -Wmissing-export-lists 
    -Wmissing-signatures 
    -Wname-shadowing 
    -fforce-recomp 
    -- -fno-code

common common-extensions
  default-extensions: 
    NoImplicitPrelude
    NamedFieldPuns
    RecordWildCards
    ScopedTypeVariables

library
  import: common-extensions
  import: ghc-options
  hs-source-dirs: src
  exposed-modules: 
    MeguKin.Parser.Parsers
    MeguKin.Parser.Types
  build-depends: 
    base >= 4.2 && < 5
    , megaparsec
    , parser-combinators
    , QuickCheck
    , void

executable main
  import: common-extensions
  import: ghc-options
  hs-source-dirs: app
  main-is: Main.hs

test-suite test
  import: common-extensions
  import: ghc-options
  type:exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.MeguKin.Parser
  build-depends:
    MeguKin
    ,base >= 4.2 && < 5
    ,tasty
    ,tasty-quickcheck
    ,QuickCheck
    ,megaparsec
    ,tagged
    ,directory
    ,hspec >=2.8.5 && <2.8.6
    -- sandwich
    --sydtest
    -- I would like to use `sydtest` but `nix develop` keeps failing


--  if flag(threaded)
--     ghc-options: -threaded
