[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MeguKin"
version = "0.0.1"
dependencies = [
  "lark",
  "hypothesis",
  "black"
  ,"docstring-to-markdown"
  ,"docutils"
  ,"exceptiongroup"
  ,"jedi"
  ,"mypy"
  ,"mypy-extensions"
  ,"packaging"
  ,"pyflakes"
  ,"pylsp-mypy"
  ,"pylsp-rope"
  ,"pytest"
  ,"python-jsonrpc-server"
  ,"python-language-server"
  ,"python-lsp-black"
  ,"python-lsp-jsonrpc"
  ,"python-lsp-server"
  ,"pytoolconfig"
  ,"rope"
  ,"Sphinx"
  ,"typing_extensions"
]

[metadata]
name = "MeguKin"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]

[tool.setuptools.packages.find]
where = ["."]
include = ["MeguKin"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

